--- a/css/hompage.css
+++ b/css/hompage.css
@@ -30,20 +30,7 @@
 .profile-name {
   display: flex;
   flex-direction: column;
-  color: blue;
+  color: red;
 }
 
-body {
-  background-color: #120828;
-  color: #ffe5cf;
-}
-
-a {
-  color: #ffe5cf;
-}
-
-ul {
-  list-style-type: none;
-}
-
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=hompage.css.map */
