--- a/css/homepage.css
+++ b/css/homepage.css
@@ -7,12 +7,16 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  justify-content: center;
+  margin-left: auto;
 }
 
 .nav {
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-left: auto;
+  margin-right: 1rem;
 }
 
 .nav-ul {
@@ -25,10 +29,22 @@
   height: 5rem;
   border-radius: 50%;
   background-position: center;
+  object-fit: cover;
 }
 
 .profile-name {
   display: flex;
   flex-direction: column;
-  color: red;
-}/*# sourceMappingURL=homepage.css.map */
+  color: chocolate;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 65px;
+  align-content: center;
+}
+
+.video {
+  align-content: center;
+}
+
+/*# sourceMappingURL=homepage.css.map */
