--- a/css/homepage.scss
+++ b/css/homepage.scss
@@ -7,11 +7,15 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  justify-content: center;
+  margin-left: auto;
 }
 .nav {
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-left: auto;
+  margin-right: 1rem;
 }
 .nav-ul {
   margin: 0;
@@ -32,9 +36,18 @@
   height: 5rem;
   border-radius: 50%;
   background-position: center;
+  object-fit: cover;
 }
 .profile-name {
   display: flex;
   flex-direction: column;
-  color: blue;
+  color: chocolate;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 65px;
+  align-content: center;
+}
+.video {
+  align-content: center;
 }
