--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import "https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap";
 .header {
   width: 100vh;
   display: flex;
@@ -7,12 +8,16 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  justify-content: center;
+  margin-left: auto;
 }
 
 .nav {
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-left: auto;
+  margin-right: 1rem;
 }
 
 .nav-ul {
@@ -25,15 +30,35 @@
   height: 5rem;
   border-radius: 50%;
   background-position: center;
+  object-fit: cover;
 }
 
 .profile-name {
   display: flex;
   flex-direction: column;
-  color: blue;
+  color: chocolate;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 65px;
+  align-content: center;
+}
+
+.video {
+  align-content: center;
+}
+
+.project-title {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 65px;
+  align-content: center;
 }
 
 body {
+  margin: 3rem;
+  margin-bottom: 0;
   background-color: #120828;
   color: #ffe5cf;
 }
