--- a/css/homepage.css
+++ b/css/homepage.css
@@ -12,6 +12,7 @@
 }
 
 .nav {
+  position: absolute;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -20,6 +21,7 @@
 }
 
 .nav-ul {
+  position: relative;
   margin: 0;
   padding: 0;
 }
@@ -45,6 +47,7 @@
 
 .video {
   align-content: center;
+  width: 100%;
 }
 
 /*# sourceMappingURL=homepage.css.map */
