--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@
 }
 
 .nav {
+  position: absolute;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -21,6 +22,7 @@
 }
 
 .nav-ul {
+  position: relative;
   margin: 0;
   padding: 0;
 }
@@ -46,6 +48,7 @@
 
 .video {
   align-content: center;
+  width: 100%;
 }
 
 .project-title {
@@ -56,11 +59,16 @@
   align-content: center;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 3rem;
   margin-bottom: 0;
   background-color: #120828;
   color: #ffe5cf;
+  overflow-x: hidden;
 }
 
 a {
