--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 @import "https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap";
 .header {
-  width: 100vh;
   display: flex;
 }
 
@@ -9,22 +8,26 @@
   flex-direction: column;
   text-align: center;
   justify-content: center;
-  margin-left: auto;
 }
 
 .nav {
-  position: absolute;
+  position: fixed;
+  right: 1rem;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  margin-left: auto;
-  margin-right: 1rem;
 }
 
 .nav-ul {
-  position: relative;
-  margin: 0;
-  padding: 0;
+  position: absolute;
+  margin-right: 1rem;
+  padding: 2rem;
+  z-index: 1;
+  background-color: #120828;
+}
+
+.hidden {
+  display: none;
 }
 
 .profile-image {
@@ -38,7 +41,6 @@
 .profile-name {
   display: flex;
   flex-direction: column;
-  color: chocolate;
   font-family: "Open Sans", sans-serif;
   font-weight: 500;
   font-size: 48px;
@@ -56,6 +58,32 @@
   font-weight: 500;
   font-size: 48px;
   line-height: 65px;
+  text-align: center;
+}
+
+.container-project-image {
+  width: 100vw;
+  object-fit: cover;
+}
+
+.project-image {
+  object-fit: cover;
+  width: 100vw;
+  background-position: center;
+}
+
+.about {
+  width: 100vw;
+  background-image: url("../Assests/mixkit-person-wearing-a-vr-mask-in-a-virtual-reality-room-64-original.png");
+  background-position: center;
+  background-size: cover;
+}
+
+.about-me {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 65px;
   align-content: center;
 }
 
@@ -64,7 +92,7 @@ html {
 }
 
 body {
-  margin: 3rem;
+  margin: 1rem;
   margin-bottom: 0;
   background-color: #120828;
   color: #ffe5cf;
