--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,5 +1,4 @@
 .header {
-  width: 100vh;
   display: flex;
 }
 
@@ -8,22 +7,26 @@
   flex-direction: column;
   text-align: center;
   justify-content: center;
-  margin-left: auto;
 }
 
 .nav {
-  position: absolute;
+  position: fixed;
+  right: 1rem;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  margin-left: auto;
-  margin-right: 1rem;
 }
 
 .nav-ul {
-  position: relative;
-  margin: 0;
-  padding: 0;
+  position: absolute;
+  margin-right: 1rem;
+  padding: 2rem;
+  z-index: 1;
+  background-color: #120828;
+}
+
+.hidden {
+  display: none;
 }
 
 .profile-image {
@@ -37,7 +40,6 @@
 .profile-name {
   display: flex;
   flex-direction: column;
-  color: chocolate;
   font-family: "Open Sans", sans-serif;
   font-weight: 500;
   font-size: 48px;
