--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,12 +1,33 @@
-.header {
-  display: flex;
-}
-
 .profile {
   display: flex;
   flex-direction: column;
   text-align: center;
   justify-content: center;
+}
+
+.profile-image {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  background-position: center;
+  object-fit: cover;
+}
+
+.profile-name {
+  display: flex;
+  flex-direction: column;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 65px;
+  align-content: center;
+}
+
+.hamburger {
+  position: fixed;
+  top: 3rem;
+  right: 2rem;
+  background-color: #120828;
 }
 
 .nav {
@@ -27,24 +48,6 @@
 
 .hidden {
   display: none;
-}
-
-.profile-image {
-  width: 5rem;
-  height: 5rem;
-  border-radius: 50%;
-  background-position: center;
-  object-fit: cover;
-}
-
-.profile-name {
-  display: flex;
-  flex-direction: column;
-  font-family: "Open Sans", sans-serif;
-  font-weight: 500;
-  font-size: 48px;
-  line-height: 65px;
-  align-content: center;
 }
 
 .video {
