--- a/css/homepage.scss
+++ b/css/homepage.scss
@@ -1,7 +1,3 @@
-.header {
-  display: flex;
-}
-
 .profile {
   display: flex;
   flex-direction: column;
@@ -9,6 +5,30 @@
   justify-content: center;
 }
 
+.profile-image {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  background-position: center;
+  object-fit: cover;
+}
+
+.profile-name {
+  display: flex;
+  flex-direction: column;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 65px;
+  align-content: center;
+}
+
+.hamburger {
+  position: fixed;
+  top: 3rem;
+  right: 2rem;
+  background-color: rgba(18, 8, 40, 1);
+}
 .nav {
   position: fixed;
   right: 1rem;
@@ -26,32 +46,7 @@
 .hidden {
   display: none;
 }
-// .container-profile-image {
-//   display: inline-block;
-//   width: 150px;
-//   height: 150px;
-//   border-radius: 50%;
 
-//   background-repeat: no-repeat;
-//   background-position: center center;
-//   background-size: cover;
-// }
-.profile-image {
-  width: 5rem;
-  height: 5rem;
-  border-radius: 50%;
-  background-position: center;
-  object-fit: cover;
-}
-.profile-name {
-  display: flex;
-  flex-direction: column;
-  font-family: "Open Sans", sans-serif;
-  font-weight: 500;
-  font-size: 48px;
-  line-height: 65px;
-  align-content: center;
-}
 .video {
   align-content: center;
   width: 100%;
