working on CSS still. Almost have my Vanilla done

--- a/css/activeproject.css
+++ b/css/activeproject.css
@@ -7,13 +7,13 @@
 }
 
 .container-project-image {
-  width: 100vw;
+  width: inherit;
   object-fit: cover;
 }
 
 .project-image {
   object-fit: cover;
-  width: 100vw;
+  width: 100%;
   background-position: center;
 }
 
