--- a/css/activeproject.scss
+++ b/css/activeproject.scss
@@ -6,11 +6,11 @@
   text-align: center;
 }
 .container-project-image {
-  width: 100vw;
+  width: inherit;
   object-fit: cover;
 }
 .project-image {
   object-fit: cover;
-  width: 100vw;
+  width: 100%;
   background-position: center;
 }
