--- a/css/homepage.css
+++ b/css/homepage.css
@@ -3,11 +3,12 @@
   flex-direction: column;
   text-align: center;
   justify-content: center;
+  margin-bottom: 7rem;
 }
 
 .profile-image {
-  width: 5rem;
-  height: 5rem;
+  width: 7rem;
+  height: 7rem;
   border-radius: 50%;
   background-position: center;
   object-fit: cover;
@@ -51,8 +52,14 @@
 }
 
 .video {
-  align-content: center;
+  display: flex;
+  justify-content: center;
   width: 100%;
+  margin-bottom: 7rem;
+}
+
+.footer {
+  text-align: center;
 }
 
 /*# sourceMappingURL=homepage.css.map */
