--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,12 @@
   flex-direction: column;
   text-align: center;
   justify-content: center;
+  margin-bottom: 7rem;
 }
 
 .profile-image {
-  width: 5rem;
-  height: 5rem;
+  width: 7rem;
+  height: 7rem;
   border-radius: 50%;
   background-position: center;
   object-fit: cover;
@@ -52,8 +53,14 @@
 }
 
 .video {
-  align-content: center;
+  display: flex;
+  justify-content: center;
   width: 100%;
+  margin-bottom: 7rem;
+}
+
+.footer {
+  text-align: center;
 }
 
 .project-title {
@@ -65,21 +72,25 @@
 }
 
 .container-project-image {
-  width: 100vw;
+  width: inherit;
   object-fit: cover;
 }
 
 .project-image {
   object-fit: cover;
-  width: 100vw;
+  width: 100%;
   background-position: center;
 }
 
 .about {
-  width: 100vw;
-  background-image: url("../Assests/mixkit-person-wearing-a-vr-mask-in-a-virtual-reality-room-64-original.png");
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 100%;
+  background-image: url("");
   background-position: center;
   background-size: cover;
+  margin-bottom: 7rem;
 }
 
 .about-me {
@@ -90,13 +101,49 @@
   align-content: center;
 }
 
+.contact {
+  margin-bottom: 7rem;
+}
+
+.contact-title {
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 65px;
+  align-content: center;
+}
+
+.container-contact-logo {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.contact-logo-linkedin {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.contact-logo-sms {
+  grid-area: 2/2/3/3;
+  display: flex;
+  justify-content: center;
+}
+
+.contact-logo-github {
+  grid-area: 1/3/1/3;
+  display: flex;
+  justify-content: flex-start;
+}
+
 html {
   overflow-x: hidden;
 }
 
 body {
   margin: 1rem;
-  margin-bottom: 0;
+  margin-top: 2rem;
   background-color: #120828;
   color: #ffe5cf;
   overflow-x: hidden;
