--- a/css/main.scss
+++ b/css/main.scss
@@ -9,7 +9,7 @@ html {
 }
 body {
   margin: 1rem;
-  margin-bottom: 0;
+  margin-top: 2rem;
   background-color: rgba(18, 8, 40, 1);
   color: rgba(255, 229, 207, 1);
   overflow-x: hidden;
