--- a/css/main.css
+++ b/css/main.css
@@ -87,10 +87,6 @@
   flex-direction: column;
   text-align: center;
   width: 100%;
-  background-image: url("");
-  background-position: center;
-  background-size: cover;
-  margin-bottom: 7rem;
 }
 
 .about-me {
@@ -142,7 +138,7 @@ html {
 }
 
 body {
-  margin: 1rem;
+  margin: 0;
   margin-top: 2rem;
   background-color: #120828;
   color: #ffe5cf;
