--- a/css/main.scss
+++ b/css/main.scss
@@ -8,7 +8,7 @@ html {
   overflow-x: hidden;
 }
 body {
-  margin: 1rem;
+  margin: 0;
   margin-top: 2rem;
   background-color: rgba(18, 8, 40, 1);
   color: rgba(255, 229, 207, 1);
