--- a/css/homepage.scss
+++ b/css/homepage.scss
@@ -27,7 +27,7 @@
 .hamburger {
   position: fixed;
   top: 3rem;
-  right: 2rem;
+  right: 2.6rem;
 }
 .nav {
   position: fixed;
@@ -37,11 +37,17 @@
   align-items: center;
 }
 .nav-ul {
-  position: absolute;
-  margin-right: 1rem;
-  padding: 2rem;
+  text-align: center;
+  position: fixed;
+  right: 0;
+  top: 3rem;
+  padding: 0.5rem;
   z-index: 1;
-  background-color: rgba(18, 8, 40, 1);
+  background-color: rgba(18, 8, 32, 1);
+}
+
+.nav-ul-li-link {
+  text-decoration: none;
 }
 .hidden {
   display: none;
@@ -50,9 +56,14 @@
 .video {
   display: flex;
   justify-content: center;
+  width: 100vw;
+  height: 50vh;
+  margin-bottom: 7rem;
+}
+
+.video-iframe {
   width: 100%;
   height: 100%;
-  margin-bottom: 7rem;
 }
 
 .footer {
