--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@
 .hamburger {
   position: fixed;
   top: 3rem;
-  right: 2rem;
+  right: 2.6rem;
 }
 
 .nav {
@@ -40,11 +40,17 @@
 }
 
 .nav-ul {
-  position: absolute;
-  margin-right: 1rem;
-  padding: 2rem;
+  text-align: center;
+  position: fixed;
+  right: 0;
+  top: 3rem;
+  padding: 0.5rem;
   z-index: 1;
-  background-color: #120828;
+  background-color: #120820;
+}
+
+.nav-ul-li-link {
+  text-decoration: none;
 }
 
 .hidden {
@@ -54,9 +60,14 @@
 .video {
   display: flex;
   justify-content: center;
+  width: 100vw;
+  height: 50vh;
+  margin-bottom: 7rem;
+}
+
+.video-iframe {
   width: 100%;
   height: 100%;
-  margin-bottom: 7rem;
 }
 
 .footer {
