--- a/css/homepage.scss
+++ b/css/homepage.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   text-align: center;
   justify-content: center;
-  margin-bottom: 7rem;
+  margin-bottom: 5rem;
 }
 
 .profile-image {
@@ -43,7 +43,7 @@
   top: 3rem;
   padding: 0.5rem;
   z-index: 1;
-  background-color: rgba(18, 8, 32, 1);
+  // background-color: rgba(18, 8, 32, 1);
 }
 
 .nav-ul-li-link {
