added some JS added some responsive styling... need to build active projects page and past projects page

--- a/css/activeproject.css
+++ b/css/activeproject.css
@@ -17,4 +17,16 @@
   background-position: center;
 }
 
+.project {
+  margin-top: 10rem;
+}
+
+.about {
+  margin-top: 10rem;
+}
+
+.contact {
+  margin-top: 10rem;
+}
+
 /*# sourceMappingURL=activeproject.css.map */
