--- a/css/activeproject.scss
+++ b/css/activeproject.scss
@@ -14,3 +14,14 @@
   width: 100%;
   background-position: center;
 }
+
+.project {
+  margin-top: 10rem;
+}
+.about {
+  margin-top: 10rem;
+}
+
+.contact {
+  margin-top: 10rem;
+}
