--- a/css/homepage.css
+++ b/css/homepage.css
@@ -72,4 +72,11 @@
   text-align: center;
 }
 
+@media screen and (min-width: 992px) {
+  .video-iframe {
+    width: 50%;
+    height: 100%;
+  }
+}
+
 /*# sourceMappingURL=homepage.css.map */
