--- a/css/aboutme.scss
+++ b/css/aboutme.scss
@@ -28,6 +28,7 @@
   font-size: 48px;
   line-height: 65px;
   align-content: center;
+  margin-bottom: 5rem;
 }
 .container-contact-logo {
   display: grid;
