--- a/css/aboutme.scss
+++ b/css/aboutme.scss
@@ -28,7 +28,6 @@
   font-size: 48px;
   line-height: 65px;
   align-content: center;
-  margin-bottom: 5rem;
 }
 .container-contact-logo {
   display: grid;
@@ -49,4 +48,10 @@
   grid-area: 1 / 3 / 1 / 3;
   display: flex;
   justify-content: flex-start;
+}
+
+@media screen and (min-width: 992px) {
+  .contact-title {
+    margin-bottom: 7rem;
+  }
 }
