not sure why the changes were not applied trying again

--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -53,4 +53,10 @@
   justify-content: flex-start;
 }
 
+@media screen and (min-width: 992px) {
+  .contact-title {
+    margin-bottom: 7rem;
+  }
+}
+
 /*# sourceMappingURL=aboutme.css.map */
